Ajouter toute les annontation swagger pour tester le API
