# storage/api-docs/api-docs.json
@@ -31,6 +31,35 @@
                 ],
                 "summary": "Créer une nouvelle offre",
                 "operationId": "06984a0bba650db64aedbd14e79b4736",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "title",
+                                    "description",
+                                    "budget"
+                                ],
+                                "properties": {
+                                    "title": {
+                                        "type": "string",
+                                        "example": "Recherche Graphiste"
+                                    },
+                                    "description": {
+                                        "type": "string",
+                                        "example": "Création d'un logo"
+                                    },
+                                    "budget": {
+                                        "type": "number",
+                                        "example": 1000
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
                 "responses": {
                     "201": {
                         "description": "Offre créée avec succès"
